--- a/package.json
+++ b/package.json
@@ -7,18 +7,37 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "clean": "react-native-clean-project"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.12",
+    "@react-native-firebase/app": "^14.5.1",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
+    "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "firebase": "^9.6.9",
+    "lottie-react-native": "^5.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-bottom-sheet": "^1.0.3",
+    "react-native-bouncy-checkbox": "^2.1.10",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^2.1.3",
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-reanimated": "^2.3.3",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.2",
+    "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "react-native-clean-project": "^4.0.1"
   },
   "private": true
 }
